--- a/FormDesign/new.css
+++ b/FormDesign/new.css
@@ -10,20 +10,21 @@
     background-size: cover ;
     background-position: left;
     margin-top: -40%;
-    margin-left: 15%;
-    width: 500px;
+    margin-left: 20%;
+    width: 520px;
 height: 650px;
 padding: 150px 100px 150px 0px;
 font-family: 'Poppins', sans-serif;}
 .two{
-    margin-left: 50%; 
+    margin-left: 55%; 
     margin-top: 15%;
+
     font-family: 'Poppins', sans-serif;
 }
 .first-h{
     padding-bottom: 30px;
     margin-top: -20%;
-padding-left: 10%;
+padding-left: 8%;
 }
 .label1{
     padding-top: 30px;
@@ -50,44 +51,57 @@ padding-left: 10%;
 .label8{
     padding-bottom: 30px;
 }
-.a{margin-left: 100px;
+.a{margin-left: 200px;
     color: white;
     font-family: 'Poppins', sans-serif;
     font-size: 22px;
     line-height: 1.2;
 }
-.b{margin-left: 100px;
+.b{margin-left: 200px;
     font-size: 15px;
     line-height: 1.6;
     color: #999;
 }
-.c{margin-left: 100px;
+.c{margin-left: 200px;
     font-size: 15px;
     line-height: 1.6;
     color: #00ad5f;
 }
 
+    .cc{margin-left: 194px;
+    font-size: 15px;
+    line-height: 1.6;
+    color: #00ad5f;}
+
+
 .a1{
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
+    margin-left: -60px;
+    margin-top: 150px;
 }
 .a2{
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
+    margin-left: -55px;
 }
 .a3{
-    padding-bottom: 5px;
+    /* padding-bottom: 5px; */
+    margin-left: -56px;
 }
 .b1{
-    padding-bottom: 5px;
+    padding-bottom: 15px;
+    margin-left: -35px;
     font-size: 15px;
     line-height: 1.6;
     color: #999;
 }
 .c1{
-    padding-bottom: 5px;
+    padding-bottom: 15px;
+    margin-left: -35px;
    
 }
 .c2{
     padding-bottom: 50px;
+    margin-left: -25px;
 }
 .button1 button{background-color: #00ad5f;
     height: 50px;
@@ -95,18 +109,18 @@ padding-left: 10%;
     margin-left: 140px;
 }
 
-/* input{padding: 10px 60px 20px 10px;} */
+input{padding: 10px 60px 20px 10px;}
 .i1{ border: 1px solid black;
     padding: 10px 57px 30px 10px;
 }
-/* .i2{border: 1px solid black;
-padding: 10px 3px 30px 10px;} */
+.i2{border: 1px solid black;
+padding: 10px 3px 30px 10px;}
 .i3{border: 1px solid black;
     padding: 10px 293px 30px 10px;}
     .i4{border: 1px solid black;
         padding: 10px 293px 30px 10px;}
         .i5{border: 1px solid black;
-            padding: 10px 293px 30px 10px;}
+            padding: 10px 292px 30px 10px;}
 
 .i6{ 
     margin-left: -1%;
@@ -132,5 +146,10 @@ border-bottom: none;
             }
             /* .s1 img{width:30px;
             margin-left: -10px;} */
-            
+            .img1{
+                width:20px;
+            }
+            .img2{
+                width:20px;
+            }
             
