--- a/bootstrap/work3.css
+++ b/bootstrap/work3.css
@@ -33,13 +33,13 @@
     background-color: rgb(153, 52, 158);
 }
 .seven{text-align: center;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: rgb(52, 128, 158);
 }
 .eight{text-align: center;
-    padding-top: 80px;
-    padding-bottom: 80px;
+    padding-top: 100px;
+    padding-bottom: 100px;
     background-color: rgb(84, 125, 32);
 }
 .nine{text-align: center;
@@ -47,4 +47,13 @@
     padding-bottom: 20px;
     background-color: rgb(52, 96, 158);
 }
-
+/* .ten>[class*='col-']
+{
+    padding-top: 0;
+    padding-right: 0;
+}
+ */
+ .a {
+    line-height:1px;
+  }
+  
