--- a/bootstrap/work5.css
+++ b/bootstrap/work5.css
@@ -39,3 +39,5 @@ padding-bottom: 30px;}
     background-color: pink;
     padding-top: 30px;
     padding-bottom: 30px;}
+    .lol{text-align: center;
+    padding-top: 60px;}
