--- a/bootstrap/work8.css
+++ b/bootstrap/work8.css
@@ -1,12 +1,11 @@
-.container{border: 1px solid rgb(252, 250, 250);
+.container{border: 1px solid rgb(226, 216, 216);
 }
  .a{width: 100%;
-height: 250px;
+/* height: 250px; */
 }
 
 p{
 text-align: center;
-padding-top: 100px;
-padding-top: 100px;}
-.row{border: 1px solid rgb(252, 250, 250);}
-.b{border: 1px solid rgb(252, 250, 250);}
+padding-top: 150px;}
+.row{border: 1px solid rgb(226, 205, 205);}
+.b{border: 1px solid rgb(226, 217, 217);}
