--- a/bootstrap/layout/task4.css
+++ b/bootstrap/layout/task4.css
@@ -1,3 +1,6 @@
-.a{border: 1px solid black;}
-.b{border: 1px solid black;}
+.d{
+padding-top: 52px;}
+/* .b{border: 1px solid black;}
 .c{border: 1px solid black;}
+.d{border: 1px solid black;} */
+.e{padding-top: 138px;}
