--- a/bootstrap/layout/task4.html
+++ b/bootstrap/layout/task4.html
@@ -9,27 +9,48 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-lg a py-2"></div>
+        <div class="row my-3">
+            <div class="col-lg a py-2 bg-primary"></div>
         </div>
-        <div class="row">
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
-            <div class="col-lg b py-2"></div>
+        <div class="row my-3">
+            <div class="col-lg b py-2 bg-dark"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
+            <div class="col-lg b py-2 bg-dark ms-2"></div>
         </div>
-        <div class="row">
-            <div class="col-lg c py-2"></div>
-            <div class="col-lg c py-2"></div>
-            <div class="col-lg c py-2"></div>
+        <div class="row mt-3">
+            <div class="col-lg  bg-primary"></div>
+            <div class="col-lg ms-2">
+                <div class="row">
+                    <div class="col-lg-12 e c  bg-primary "></div>
+                    <div class="col-lg-12 e mt-3  bg-primary "></div>
+                </div>
+            </div>
+            <div class="col-lg">
+                <div class="row">
+                    <div class="col-lg d   ms-2 mb-2 bg-dark"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg d  ms-2 mb-2 bg-dark"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg d  ms-2 mb-2 bg-dark"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg d   ms-2 mb-2 bg-dark"></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg d  ms-2  bg-dark"></div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <div class="col-lg a"></div>
+        <div class="row mt-3">
+            <div class="col-lg a py-2 bg-primary"></div>
         </div>
     </div>
 
